Add dropdown menu in admin page for choise area and category

--- a/E_Advertisement/app/src/main/AndroidManifest.xml
+++ b/E_Advertisement/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Andmin_page"></activity>
+        <activity android:name=".Admin_page"></activity>
     </application>
 
 </manifest>
