Show data in 2 fragment. Add click Listener on main screen

--- a/E_Advertisement/app/src/main/AndroidManifest.xml
+++ b/E_Advertisement/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".E_aplication">
-        <activity android:name=".DescriptionNewActivity" />
-        <activity android:name=".Admin_page"/>
+        android:name=".E_application">
+        <activity android:name=".DescriptionNewActivity"/>
+        <activity android:name=".Admin_page"
+            android:windowSoftInputMode="adjustResize"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
