--- a/E_Advertisement/app/src/main/AndroidManifest.xml
+++ b/E_Advertisement/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".DescriptionNewActivity" />
         <activity
-            android:name=".Admin_page"
+            android:name=".AdminPage"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".MainActivity">
             <intent-filter>
