[+] Add fab button and logo IoT

--- a/E_Advertisement/app/src/main/AndroidManifest.xml
+++ b/E_Advertisement/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".Register"
             android:label="@string/title_activity_register"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".TEST"
+            android:label="@string/title_activity_test"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
