--- a/E_Advertisement/app/build.gradle
+++ b/E_Advertisement/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.6.2'
     compile 'com.google.firebase:firebase-auth:11.6.2'
     compile 'com.google.android.gms:play-services-auth:11.6.2'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.github.danylovolokh:hashtag-helper:1.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
