[+] Clear project from realm and firebase database. Test GET request in test activity

--- a/E_Advertisement/app/src/main/AndroidManifest.xml
+++ b/E_Advertisement/app/src/main/AndroidManifest.xml
@@ -18,21 +18,23 @@
         <activity android:name=".DescriptionNewActivity" />
         <activity
             android:name=".AdminPage"
-            android:windowSoftInputMode="adjustResize" >
-
-        </activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".MainActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity android:name=".SignInActivity" />
+        <activity android:name=".BaseActivity" />
+        <activity android:name=".Test">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".SignInActivity">
-
-        </activity>
-        <activity android:name=".BaseActivity"></activity>
     </application>
 
 </manifest>
