--- a/E_Advertisement/app/build.gradle
+++ b/E_Advertisement/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
@@ -12,22 +11,14 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        def host = InetAddress.getLocalHost().getCanonicalHostName()
-        debug {
-            // This will automatically detect the IP address of the machine building RealmTasks.
-            // It is assumed that this machine is also running the Object Server.
-            // If not, replace 'host' with the IP of the machine hosting the server.
-            buildConfigField "String", "OBJECT_SERVER_IP", "\"${host}\""
-        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "OBJECT_SERVER_IP", "\"${host}\""
+
         }
     }
-    realm {
-        syncEnabled = true
-    }
+
 }
 
 dependencies {
@@ -35,12 +26,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.+'
-    implementation 'com.google.firebase:firebase-messaging:11.6.2'
+    implementation 'com.android.support:design:26.1.0'
     compile 'com.google.firebase:firebase-core:11.6.2'
-    compile 'com.google.firebase:firebase-database:11.6.2'
     compile 'com.google.firebase:firebase-auth:11.6.2'
     compile 'com.google.android.gms:play-services-auth:11.6.2'
+    compile 'com.android.volley:volley:1.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.github.danylovolokh:hashtag-helper:1.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
