--- a/E_Advertisement/build.gradle
+++ b/E_Advertisement/build.gradle
@@ -7,20 +7,29 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath "io.realm:realm-gradle-plugin:4.1.1"
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.google.gms:google-services:3.1.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+
 allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+buildscript {
+    repositories {
+        jcenter()
+    }
 }
